--- a/styles/scss/layout/_forms.scss
+++ b/styles/scss/layout/_forms.scss
@@ -133,56 +133,4 @@
         padding: .3% 0;
         border-bottom: .2rem solid rgba(252,56,75, 0.2);
     }
-    
-    .social {
-        position: absolute;
-        bottom: 0;
-        left: 64%;
-        @include med {
-            bottom: 5.5rem;
-            left: unset;
-            right: 4rem;
-        }
-        @include sm {
-            right: 50%;
-            margin-right: -6.5rem;
-        }
-        ul {
-            display: flex;
-            @include sm {
-                justify-content: center;
-            }
-        }
-        li {
-            border: transparent;
-            border-radius: .5rem;
-            margin-right: .5rem;
-        }
-        li a {
-            transition: text-shadow .25s ease-out;
-            color: $white;
-            display: block;
-            height: 3.5rem;
-            width: 3.5rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        li:first-of-type {
-            background-color: $black;
-        }
-        li:nth-of-type(2) {
-            background-color: #00acee;
-        }
-        li:last-of-type {
-            background-color: #0072b1;
-        }
-        li:hover a,
-        li:focus-within a {
-            text-shadow: 0 0 .5rem $white;
-        }
-        p {
-            margin-bottom: 10%;
-        }
-    }
 }
